tests/ill-typed/bad-nat-rec-1.stella
language core;

fn main(n : Bool) -> (fn(Nat) -> Nat) {
  return fn(m : Nat) {
    return Nat::rec(n, m, fn(i : Nat) {
      return fn (r : Nat) {
        return succ(r);
      };
    });
  };
}